force-app/main/default/objects/SVMXA360__CONF_ExpressionDetail__c/SVMXA360__CONF_ExpressionDetail__c.object-meta.xml
<CustomObject>
    <description>Stores the Expression Detail information.</description>
    <label>Expression Detail</label>
    <nameField>
        <displayFormat>ED-{0000000000}</displayFormat>
        <label>Expression Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expression Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>