force-app/main/default/objects/SVMXA360__CONF_ExpressionDetail__c/fields/SVMXA360__ExpressionId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ExpressionId__c</fullName>
    <description>The parent expression.</description>
    <label>Expression</label>
    <referenceTo>SVMXA360__CONF_Expression__c</referenceTo>
    <relationshipLabel>Expression Detail</relationshipLabel>
    <relationshipName>Expression_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>