force-app/main/default/objects/SVMXA360__CONF_ExpressionDetail__c/fields/SVMXA360__FieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__FieldAPIName__c</fullName>
    <description>The API name of the field for the expression rule.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>