force-app/main/default/objects/SVMXA360__CONF_ExpressionDetail__c/fields/SVMXA360__FieldType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__FieldType__c</fullName>
    <description>The data type of the field.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Field Type</label>
    <length>32</length>
    <type>Text</type>
</CustomField>