force-app/main/default/objects/SVMXA360__CONF_ExpressionDetail__c/fields/SVMXA360__LiteralParameter__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LiteralParameter__c</fullName>
    <description>Stores the field API name for literal functions like user and current header record of expression detail.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Stores the field API name for literal functions like user and current header record of expression detail.</inlineHelpText>
    <label>Literal Parameter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>