force-app/main/default/objects/SVMXA360__CONF_ExpressionDetail__c/fields/SVMXA360__LiteralRelatedObjectDetails__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LiteralRelatedObjectDetails__c</fullName>
    <description>This field stores the object sequence of multi reference literal field of expression detail</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Literal Related Object Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>