force-app/main/default/objects/SVMXA360__CONF_ExpressionDetail__c/fields/SVMXA360__Operand__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Operand__c</fullName>
    <description>The operand of the expression rule.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Operand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>