force-app/main/default/objects/SVMXA360__CONF_ExpressionDetail__c/fields/SVMXA360__OperandType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__OperandType__c</fullName>
    <description>The data type of the value in the operand.</description>
    <label>Operand Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value</fullName>
            </value>
            <value>
                <fullName>Function</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>