force-app/main/default/objects/SVMXA360__CONF_ExpressionDetail__c/fields/SVMXA360__Operator__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Operator__c</fullName>
    <description>The operator of the expression rule.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Operator</label>
    <length>100</length>
    <type>Text</type>
</CustomField>