force-app/main/default/objects/SVMXA360__CONF_ExpressionDetail__c/fields/SVMXA360__RelationshipFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__RelationshipFieldAPIName__c</fullName>
    <description>The API name of the lookup field.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Relationship Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>