force-app/main/default/objects/SVMXA360__CONF_ExpressionDetail__c/fields/SVMXA360__RelationshipName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__RelationshipName__c</fullName>
    <description>The relationship name of the object for the lookup field.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Relationship Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>