force-app/main/default/objects/SVMXA360__CONF_ExpressionDetail__c/fields/SVMXA360__SourceObjectName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SourceObjectName__c</fullName>
    <description>This field stores source object api name of expression detail</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Object Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>